[package]
name = "merkle_tree"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rayon = { version = "1.5", optional = true }
crossbeam = "0.8"
